# vello_bench2

./: .gitignore  Cargo.toml  README.md  ab.sh  serve.sh
.cargo/: config.toml
.github/workflows/: deploy.yml
src/: backend.rs  capability.rs  fps.rs  harness.rs  lib.rs  main.rs  storage.rs  ui.rs
src/backend/: canvas2d.rs  cpu.rs  hybrid.rs  mod.rs  pathfinder.rs  vello.rs
src/scenes/: clip.rs  filter_layers.rs  mod.rs  polyline.rs  rect.rs  strokes.rs  svg.rs  text.rs
web/: ab.html  ab_child.html  index.html  worker.html
webgl-test/: index.html  serve.sh
