[package]
name = "vello_bench2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
pathfinder = [
    "dep:pathfinder_canvas",
    "dep:pathfinder_color",
    "dep:pathfinder_content",
    "dep:pathfinder_geometry",
    "dep:pathfinder_renderer",
    "dep:pathfinder_resources",
    "dep:pathfinder_simd",
    "dep:pathfinder_webgl",
]

[dependencies]
bytemuck = "1.25"
brotli-decompressor = "4.0.3"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
smallvec = {version = "1.15.1" }
skrifa = { version = "0.42.0" }
usvg = { version = "0.47.0" }
vello_common = { git = "https://github.com/linebender/vello", rev = "11206ba7" }
vello_hybrid = { git = "https://github.com/linebender/vello", rev = "11206ba7", default-features = false, features = ["webgl", "text", "std", "probe"] }
vello_cpu = { git = "https://github.com/linebender/vello", rev = "11206ba7", default-features = false, features = ["text", "u8_pipeline", "png", "std"] }
glifo = {  git = "https://github.com/linebender/vello", rev = "11206ba7" }
#vello_common = { path = "../vello/sparse_strips/vello_common" }
#vello_hybrid = { path = "../vello/sparse_strips/vello_hybrid", default-features = false, features = ["webgl", "text", "std", "probe"]  }
#vello_cpu = { path = "../vello/sparse_strips/vello_cpu", default-features = false, features = ["text", "u8_pipeline", "png", "std"]  }
#glifo = { path = "../vello/glifo" }
pathfinder_canvas = { git = "https://github.com/servo/pathfinder", branch = "main", optional = true }
pathfinder_color = { git = "https://github.com/servo/pathfinder", branch = "main", optional = true }
pathfinder_content = { git = "https://github.com/servo/pathfinder", branch = "main", optional = true }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder", branch = "main", optional = true }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder", branch = "main", optional = true }
pathfinder_resources = { git = "https://github.com/servo/pathfinder", branch = "main", optional = true }
pathfinder_simd = { git = "https://github.com/servo/pathfinder", branch = "main", optional = true }
pathfinder_webgl = { git = "https://github.com/servo/pathfinder", branch = "main", optional = true }
js-sys = "0.3.83"
wasm-bindgen = "=0.2.118"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
    "Window",
    "Document",
    "DomRect",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "CssStyleDeclaration",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "CanvasWindingRule",
    "ImageData",
    "Performance",
    "Response",
    "Storage",
    "Event",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "AddEventListenerOptions",
    "EventTarget",
    "MessageEvent",
    "Node",
    "TouchEvent",
    "TouchList",
    "Touch",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cargo-run-wasm = "0.4.0"

[profile.instrument]
inherits = "release"
debug = true
strip = "none"

[profile.dist]
inherits = "release"
debug = false
strip = "symbols"
lto = "fat"
codegen-units = 1
